# space-ql

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: Dependencies.kt  Versions.kt
docs/: pom.xml
docs/src/main/asciidoc/: index.adoc
docs/src/main/asciidoc/chapters/: chapterCommon.asciidoc  chapterGraphEls.asciidoc  chapterServer.asciidoc
src/assets/: design.html  populationScript.py
src/assets/pyScripts/: coupledPopulate.py  elsPopulate.py  pyproject.toml
src/commonMain/kotlin/application/aliases/: contactPointAlias.kt  formatAlias.kt  langAlias.kt
src/commonMain/kotlin/application/model/: Dataset.kt  MetadataRecord.kt  RelatedElements.kt  Service.kt
src/commonMain/resources/static/: index.html  style.css
src/docker/: docker-compose.yml
src/jsMain/kotlin/: Client.kt  Index.kt  MetaData.kt  MetadataRecord.kt  WelcomeStyles.kt
src/jsMain/kotlin/frontend/: Api.kt  GraphQuery.kt
src/jsMain/kotlin/frontend/App/: App.kt
src/jsMain/kotlin/frontend/Results/: Result.kt
src/jsMain/kotlin/frontend/Searchbar/: Searchbar.kt
src/jsMain/kotlin/frontend/actions/: TestActions.kt
src/jsMain/kotlin/frontend/app/: App.kt  (+2 more)
src/jsMain/resources/: application.conf
src/jvmMain/kotlin/application/: BasicService.kt  ServerApplication.kt
src/jvmMain/kotlin/me.javier.application/: BasicController.kt  BasicService.kt  Server.kt  ServerApplication.kt  SimpleController.kt  SimpleRoute.kt
src/jvmMain/resources/: schema.graphql
src/jvmMain/resources/data/: rayos.xml
src/jvmMain/resources/schema/: schema.graphqls
(+65 files in other folders)
