[tool.poetry]
name = "pyscripts"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
requests = "^2.28.0"
xmltodict = "^0.13.0"
elasticsearch = "^7.17"
jsonpath-ng = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
